Finish latest schema changes
